@@ -8,11 +8,13 @@
 package com.aptana.js.internal.core.node;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.MessageFormat;
+import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import org.eclipse.core.runtime.CoreException;
@@ -22,22 +24,21 @@ import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.SubMonitor;
+import org.eclipse.core.runtime.preferences.InstanceScope;
 
 import com.aptana.core.ShellExecutable;
 import com.aptana.core.logging.IdeLog;
 import com.aptana.core.util.CollectionsUtil;
-import com.aptana.core.util.EclipseUtil;
 import com.aptana.core.util.ExecutableUtil;
 import com.aptana.core.util.FileUtil;
+import com.aptana.core.util.IProcessRunner;
 import com.aptana.core.util.PlatformUtil;
-import com.aptana.core.util.ProcessRunnable;
+import com.aptana.core.util.ProcessRunner;
 import com.aptana.core.util.ProcessStatus;
-import com.aptana.core.util.ProcessUtil;
 import com.aptana.core.util.StringUtil;
-import com.aptana.core.util.SudoCommandProcessRunnable;
-import com.aptana.core.util.VersionUtil;
 import com.aptana.ide.core.io.downloader.DownloadManager;
 import com.aptana.js.core.JSCorePlugin;
+import com.aptana.js.core.node.INodeJS;
 import com.aptana.js.core.node.INodeJSService;
 
 /**
@@ -62,28 +63,49 @@ public class NodeJSService implements INodeJSService
 
 	private static final String NODE_EXE = "node.exe"; //$NON-NLS-1$
 
-	private static final String MAC_NODE_URL = "http://go.aptana.com/installer_nodejs_osx"; //$NON-NLS-1$
-	private static final String WIN_NODE_URL = "http://go.aptana.com/installer_nodejs_windows"; //$NON-NLS-1$
+	private static final String MAC_NODE_URL = "http://go.appcelerator.com/installer_nodejs_osx"; //$NON-NLS-1$
+	private static final String WIN_NODE_URL = "http://go.appcelerator.com/installer_nodejs_windows"; //$NON-NLS-1$
 	private static final String MAC_EXTENSION = ".pkg"; //$NON-NLS-1$
 	private static final String WIN_EXTENSION = ".msi"; //$NON-NLS-1$
 
 	private Set<Listener> listeners;
+	private Map<IPath, INodeJS> nodeJsInstalls;
+
+	private INodeJS fNodeExePath;
 
 	public NodeJSService()
 	{
 		listeners = new LinkedHashSet<Listener>();
+		nodeJsInstalls = new HashMap<IPath, INodeJS>();
+
+		fNodeExePath = findValidExecutable();
 	}
 
 	/*
 	 * (non-Javadoc)
 	 * @see com.appcelerator.titanium.nodejs.core.INodeJSService#find()
 	 */
-	public IPath find()
+	public INodeJS detectInstall()
 	{
+		IPath path = null;
 		if (PlatformUtil.isWindows())
 		{
+			// Look in the registry!
+			String installedPath = PlatformUtil.queryRegistryStringValue("HKEY_CURRENT_USER\\Software\\Node.js", //$NON-NLS-1$
+					"InstallPath"); //$NON-NLS-1$
+			if (!StringUtil.isEmpty(installedPath))
+			{
+				IPath regPath = Path.fromOSString(installedPath).append(NODE_EXE);
+				INodeJS install = getNodeJsInstall(regPath);
+				if (install.exists())
+				{
+					return install;
+				}
+			}
+
+			// Look on the PATH and in standard locations
 			// @formatter:off
-			return ExecutableUtil.find(NODE_EXE, false, 
+			path = ExecutableUtil.find(NODE_EXE, false, 
 					CollectionsUtil.newList(
 							Path.fromOSString(PlatformUtil.expandEnvironmentStrings(PROGRAM_FILES_NODEJS_NODE_PATH)),
 							Path.fromOSString(PlatformUtil.expandEnvironmentStrings(PROGRAM_FILES_X86_NODEJS_NODE_PATH))
@@ -91,8 +113,27 @@ public class NodeJSService implements INodeJSService
 					);
 			// @formatter:on
 		}
+		else
+		{
+			path = ExecutableUtil.find(NODE, false, CollectionsUtil.newList(Path.fromOSString(USR_LOCAL_BIN_NODE)));
+		}
 
-		return ExecutableUtil.find(NODE, false, CollectionsUtil.newList(Path.fromOSString(USR_LOCAL_BIN_NODE)));
+		if (path == null)
+		{
+			return null;
+		}
+		return getNodeJsInstall(path);
+	}
+
+	private synchronized INodeJS getNodeJsInstall(IPath path)
+	{
+		if (nodeJsInstalls.containsKey(path))
+		{
+			return nodeJsInstalls.get(path);
+		}
+		INodeJS nodeJs = new NodeJS(path);
+		nodeJsInstalls.put(path, nodeJs);
+		return nodeJs;
 	}
 
 	/*
@@ -103,6 +144,7 @@ public class NodeJSService implements INodeJSService
 	{
 		SubMonitor sub = SubMonitor.convert(monitor, Messages.NodeJSService_InstallingJobTitle, 100);
 		// TODO This smells strongly of needing to use subclasses based on platform so I can avoid all these ifs.
+		// TODO Allow for installing on Ubuntu? May need to build from source to get version we want...
 		// Verify we're Windows or Mac
 		if (!PlatformUtil.isWindows() && !PlatformUtil.isMac())
 		{
@@ -112,15 +154,15 @@ public class NodeJSService implements INodeJSService
 		// Grab the URL for the platform
 		String rawURL = PlatformUtil.isWindows() ? WIN_NODE_URL : MAC_NODE_URL;
 		String extension = PlatformUtil.isWindows() ? WIN_EXTENSION : MAC_EXTENSION;
-		URL url;
+		URI uri;
 		try
 		{
-			url = new URL(rawURL);
+			uri = new URI(rawURL);
 		}
-		catch (MalformedURLException e)
+		catch (URISyntaxException e)
 		{
 			IdeLog.logError(JSCorePlugin.getDefault(),
-					MessageFormat.format("Bad Download URL for node: {0}", rawURL), e); //$NON-NLS-1$
+					MessageFormat.format("Bad Download URI for node: {0}", rawURL), e); //$NON-NLS-1$
 			return new Status(IStatus.ERROR, JSCorePlugin.PLUGIN_ID, MessageFormat.format(
 					Messages.NodeJSService_BadURLError, rawURL), e);
 		}
@@ -128,25 +170,30 @@ public class NodeJSService implements INodeJSService
 		try
 		{
 			// download the installer
-			File file = download(url, extension, sub.newChild(90));
+			File file = download(uri, extension, sub.newChild(90));
 			// run the installer
 			IStatus status;
 			if (PlatformUtil.isWindows())
 			{
-				status = ProcessUtil.runInBackground("msiexec", Path.ROOT, "/i", file.getAbsolutePath()); //$NON-NLS-1$ //$NON-NLS-2$
+				status = new ProcessRunner().runInBackground(Path.ROOT, "msiexec", "/i", file.getAbsolutePath()); //$NON-NLS-1$ //$NON-NLS-2$
 			}
 			else
 			{
-				Process p = ProcessUtil.run("sudo", Path.ROOT,//$NON-NLS-1$
-						"-S", "--",//$NON-NLS-1$ //$NON-NLS-2$
+				List<String> args = CollectionsUtil.newList("sudo"); //$NON-NLS-1$
+				if (password == null || password.length == 0)
+				{
+					// if sudo doesn't require a password
+					args.add("-n"); //$NON-NLS-1$
+				}
+				else
+				{
+					// sudo requires a password
+					args.add("-S"); //$NON-NLS-1$
+				}
+				CollectionsUtil.addToList(args, "--",//$NON-NLS-1$
 						"/usr/sbin/installer", "-pkg", file.getAbsolutePath(), "-target", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 						"/"); //$NON-NLS-1$
-				ProcessRunnable runnable = new SudoCommandProcessRunnable(p, sub.newChild(95), true, password);
-				Thread t = new Thread(runnable, "NodeJS installer"); //$NON-NLS-1$
-				t.start();
-				t.join();
-
-				status = runnable.getResult();
+				status = createProcessRunner().run(Path.ROOT, null, password, args, sub.newChild(95));
 			}
 			// Report the status from the installer.
 			if (!status.isOK())
@@ -185,22 +232,27 @@ public class NodeJSService implements INodeJSService
 		return Status.OK_STATUS;
 	}
 
+	protected IProcessRunner createProcessRunner()
+	{
+		return new ProcessRunner();
+	}
+
 	/**
-	 * Downloads a file from url, return the {@link File} on disk where it was saved.
+	 * Downloads a file from uri, return the {@link File} on disk where it was saved.
 	 * 
-	 * @param url
+	 * @param uri
 	 * @param monitor
 	 * @return
 	 * @throws CoreException
 	 */
-	private File download(URL url, String extension, IProgressMonitor monitor) throws CoreException
+	private File download(URI uri, String extension, IProgressMonitor monitor) throws CoreException
 	{
 		DownloadManager manager = new DownloadManager();
-		IPath path = Path.fromPortableString(url.getPath());
+		IPath path = Path.fromPortableString(uri.getPath());
 		String name = path.lastSegment();
 		File f = new File(FileUtil.getTempDirectory().toFile(), name + extension);
 		f.deleteOnExit();
-		manager.addURL(url, f);
+		manager.addURI(uri, f);
 		IStatus status = manager.start(monitor);
 		if (!status.isOK())
 		{
@@ -212,101 +264,63 @@ public class NodeJSService implements INodeJSService
 
 	/*
 	 * (non-Javadoc)
-	 * @see com.appcelerator.titanium.nodejs.core.INodeJSService#acceptBinary(org.eclipse.core.runtime.IPath)
+	 * @see com.appcelerator.titanium.nodejs.core.INodeJSService#getInstallFromPreferences()
 	 */
-	public IStatus acceptBinary(IPath path)
+	public INodeJS getInstallFromPreferences()
 	{
-		if (path == null)
+		String pref = InstanceScope.INSTANCE.getNode(JSCorePlugin.PLUGIN_ID).get(
+				com.aptana.js.core.preferences.IPreferenceConstants.NODEJS_EXECUTABLE_PATH, null);
+		if (StringUtil.isEmpty(pref))
 		{
-			return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, Messages.NodeJSService_NullPathError);
+			return null;
 		}
 
-		if (!path.toFile().isFile())
+		IPath path = Path.fromOSString(pref);
+		if (path.toFile().isDirectory())
 		{
-			return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, INodeJSService.ERR_DOES_NOT_EXIST,
-					MessageFormat.format(Messages.NodeJSService_FileDoesntExistError, path), null);
+			path = path.append(PlatformUtil.isWindows() ? NODE_EXE : NODE);
 		}
-
-		String version = getVersion(path);
-		if (version == null)
-		{
-			return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, ERR_NOT_EXECUTABLE, MessageFormat.format(
-					Messages.NodeJSService_CouldntGetVersionError, path), null);
-		}
-
-		int index = version.indexOf('v');
-		if (index != -1)
-		{
-			version = version.substring(index + 1); // eliminate 'v'
-		}
-
-		if (VersionUtil.compareVersions(version, MIN_NODE_VERSION) >= 0)
-		{
-			return Status.OK_STATUS;
-		}
-
-		return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, INodeJSService.ERR_INVALID_VERSION,
-				MessageFormat.format(Messages.NodeJSService_InvalidVersionError, path, version, MIN_NODE_VERSION), null);
+		return getNodeJsInstall(path);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * @see com.appcelerator.titanium.nodejs.core.INodeJSService#savedPath()
-	 */
-	public IPath getSavedPath()
+	public INodeJS getValidExecutable()
 	{
-		String pref = EclipseUtil.instanceScope().getNode(JSCorePlugin.PLUGIN_ID)
-				.get(com.aptana.js.core.preferences.IPreferenceConstants.NODEJS_EXECUTABLE_PATH, null);
-		if (!StringUtil.isEmpty(pref))
-		{
-			IPath path = Path.fromOSString(pref);
-			if (path.toFile().isDirectory())
-			{
-				path = path.append(PlatformUtil.isWindows() ? NODE_EXE : NODE);
-			}
-			return path;
-		}
-		return null;
+		return fNodeExePath;
 	}
 
 	/*
 	 * (non-Javadoc)
 	 * @see com.appcelerator.titanium.nodejs.core.INodeJSService#validExecutable()
 	 */
-	public IPath getValidExecutable()
+	private INodeJS findValidExecutable()
 	{
 		// try user's saved path
-		IPath nodeExePath = getSavedPath();
-		if (acceptBinary(nodeExePath).isOK())
+		INodeJS nodeExePath = getInstallFromPreferences();
+		if (nodeExePath != null && nodeExePath.validate().isOK())
 		{
-			return nodeExePath;
+			fNodeExePath = nodeExePath;
 		}
 
 		// Search PATH
-		nodeExePath = find();
-		if (acceptBinary(nodeExePath).isOK())
+		nodeExePath = detectInstall();
+		if (nodeExePath != null && nodeExePath.validate().isOK())
 		{
-			return nodeExePath;
+			fNodeExePath = nodeExePath;
 		}
 
-		return null;
-	}
-
-	private boolean isValidFile(IPath nodePath)
-	{
-		return nodePath != null && nodePath.toFile().isFile();
+		return fNodeExePath;
 	}
 
 	public boolean isInstalled()
 	{
-		IPath nodeExePath = getSavedPath();
-
-		if (isValidFile(nodeExePath))
+		INodeJS nodeExePath = getInstallFromPreferences();
+		if (nodeExePath != null && nodeExePath.exists())
 		{
 			return true;
 		}
-		nodeExePath = find();
-		return isValidFile(nodeExePath);
+
+		nodeExePath = detectInstall();
+		return nodeExePath != null && nodeExePath.exists();
 	}
 
 	public void addListener(Listener listener)
@@ -321,6 +335,7 @@ public class NodeJSService implements INodeJSService
 
 	private void fireNodeJSInstalled()
 	{
+		// TODO pass along the INodeJS instance we installed!
 		for (Listener listener : listeners)
 		{
 			listener.nodeJSInstalled();
@@ -336,8 +351,8 @@ public class NodeJSService implements INodeJSService
 
 		if (!path.toFile().isDirectory())
 		{
-			return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, INodeJSService.ERR_DOES_NOT_EXIST,
-					MessageFormat.format(Messages.NodeJSService_NoDirectory_0, path), null);
+			return new Status(Status.ERROR, JSCorePlugin.PLUGIN_ID, INodeJS.ERR_DOES_NOT_EXIST, MessageFormat.format(
+					Messages.NodeJSService_NoDirectory_0, path), null);
 		}
 
 		if (!path.append(LIB).toFile().isDirectory())
@@ -350,12 +365,8 @@ public class NodeJSService implements INodeJSService
 		return Status.OK_STATUS;
 	}
 
-	public String getVersion(IPath path)
+	public IStatus acceptBinary(IPath nodeJSBinary)
 	{
-		if (path == null)
-		{
-			return null;
-		}
-		return ProcessUtil.outputForCommand(path.toOSString(), null, "-v"); //$NON-NLS-1$
+		return getNodeJsInstall(nodeJSBinary).validate();
 	}
 }
